public/css/alyoda-pdfgen.css
a.url-hidden:after {
	content: none;
}

.article__person-idnos a.url-hidden:after {
	content: " (" attr(href) ")";
}

.main-number {
	display: none;
}

.article__person-idnos h4 {
	margin-bottom: .1rem;
}

.article__person-idnos-list {
	padding: 0;
	margin: 0;
	list-style: none;
}

.noticejuridique__texte {
	margin-top: 4rem;
}

